

stress_sources = [
    'stress-access.c',
    'stress-af-alg.c',
    'stress-affinity.c',
    'stress-aio-linux.c',
    'stress-aio.c',
    'stress-apparmor.c',
    'stress-atomic.c',
    'stress-bad-altstack.c',
    'stress-bad-ioctl.c',
    'stress-bigheap.c',
    'stress-bind-mount.c',
    'stress-binderfs.c',
    'stress-branch.c',
    'stress-brk.c',
    'stress-bsearch.c',
    'stress-cache.c',
    'stress-cap.c',
    'stress-chattr.c',
    'stress-chdir.c',
    'stress-chmod.c',
    'stress-chown.c',
    'stress-chroot.c',
    'stress-clock.c',
    'stress-clone.c',
    'stress-close.c',
    'stress-context.c',
    'stress-copy-file.c',
    'stress-cpu-online.c',
    'stress-cpu.c',
    'stress-crypt.c',
    'stress-cyclic.c',
    'stress-daemon.c',
    'stress-dccp.c',
    'stress-dentry.c',
    'stress-dev-shm.c',
    'stress-dev.c',
    'stress-dir.c',
    'stress-dirdeep.c',
    'stress-dnotify.c',
    'stress-dup.c',
    'stress-dynlib.c',
    'stress-efivar.c',
    'stress-enosys.c',
    'stress-env.c',
    'stress-epoll.c',
    'stress-eventfd.c',
    'stress-exec.c',
    'stress-fallocate.c',
    'stress-fanotify.c',
    'stress-fault.c',
    'stress-fcntl.c',
    'stress-fiemap.c',
    'stress-fifo.c',
    'stress-file-ioctl.c',
    'stress-filename.c',
    'stress-flock.c',
    'stress-fork.c',
    'stress-fp-error.c',
    'stress-fstat.c',
    'stress-full.c',
    'stress-funccall.c',
    'stress-funcret.c',
    'stress-futex.c',
    'stress-get.c',
    'stress-getdent.c',
    'stress-getrandom.c',
    'stress-handle.c',
    'stress-hdd.c',
    'stress-heapsort.c',
    'stress-hrtimers.c',
    'stress-hsearch.c',
    'stress-icache.c',
    'stress-icmp-flood.c',
    'stress-idle-page.c',
    'stress-inode-flags.c',
    'stress-inotify.c',
    'stress-io-uring.c',
    'stress-iomix.c',
    'stress-ioport.c',
    'stress-ioprio.c',
    'stress-iosync.c',
    'stress-ipsec-mb.c',
    'stress-itimer.c',
    'stress-judy.c',
    'stress-kcmp.c',
    'stress-key.c',
    'stress-kill.c',
    'stress-klog.c',
    'stress-l1cache.c',
    'stress-lease.c',
    'stress-link.c',
    'stress-locka.c',
    'stress-lockbus.c',
    'stress-lockf.c',
    'stress-lockofd.c',
    'stress-longjmp.c',
    'stress-loop.c',
    'stress-lsearch.c',
    'stress-madvise.c',
    'stress-malloc.c',
    'stress-matrix-3d.c',
    'stress-matrix.c',
    'stress-mcontend.c',
    'stress-membarrier.c',
    'stress-memcpy.c',
    'stress-memfd.c',
    'stress-memhotplug.c',
    'stress-memrate.c',
    'stress-memthrash.c',
    'stress-mergesort.c',
    'stress-mincore.c',
    'stress-mknod.c',
    'stress-mlock.c',
    'stress-mlockmany.c',
    'stress-mmap.c',
    'stress-mmapaddr.c',
    'stress-mmapfixed.c',
    'stress-mmapfork.c',
    'stress-mmapmany.c',
    'stress-mq.c',
    'stress-mremap.c',
    'stress-msg.c',
    'stress-msync.c',
    'stress-nanosleep.c',
    'stress-netdev.c',
    'stress-netlink-proc.c',
    'stress-netlink-task.c',
    'stress-nice.c',
    'stress-nop.c',
    'stress-null.c',
    'stress-numa.c',
    'stress-oom-pipe.c',
    'stress-opcode.c',
    'stress-open.c',
    'stress-personality.c',
    'stress-physpage.c',
    'stress-pidfd.c',
    'stress-ping-sock.c',
    'stress-pipe.c',
    'stress-pipeherd.c',
    'stress-pkey.c',
    'stress-poll.c',
    'stress-prctl.c',
    'stress-procfs.c',
    'stress-pthread.c',
    'stress-ptrace.c',
    'stress-pty.c',
    'stress-qsort.c',
    'stress-quota.c',
    'stress-radixsort.c',
    'stress-ramfs.c',
    'stress-rawdev.c',
    'stress-rawpkt.c',
    'stress-rawsock.c',
    'stress-rawudp.c',
    'stress-rdrand.c',
    'stress-readahead.c',
    'stress-reboot.c',
    'stress-remap-file-pages.c',
    'stress-rename.c',
    'stress-resources.c',
    'stress-revio.c',
    'stress-rlimit.c',
    'stress-rmap.c',
    'stress-rseq.c',
    'stress-rtc.c',
    'stress-schedpolicy.c',
    'stress-sctp.c',
    'stress-seal.c',
    'stress-seccomp.c',
    'stress-secretmem.c',
    'stress-seek.c',
    'stress-sem-sysv.c',
    'stress-sem.c',
    'stress-sendfile.c',
    'stress-session.c',
    'stress-set.c',
    'stress-shellsort.c',
    'stress-shm-sysv.c',
    'stress-shm.c',
    'stress-sigabrt.c',
    'stress-sigchld.c',
    'stress-sigfd.c',
    'stress-sigfpe.c',
    'stress-sigio.c',
    'stress-signal.c',
    'stress-sigpending.c',
    'stress-sigpipe.c',
    'stress-sigq.c',
    'stress-sigrt.c',
    'stress-sigsegv.c',
    'stress-sigsuspend.c',
    'stress-sigtrap.c',
    'stress-skiplist.c',
    'stress-sleep.c',
    'stress-sock.c',
    'stress-sockabuse.c',
    'stress-sockdiag.c',
    'stress-sockfd.c',
    'stress-sockmany.c',
    'stress-sockpair.c',
    'stress-softlockup.c',
    'stress-spawn.c',
    'stress-splice.c',
    'stress-stack.c',
    'stress-stackmmap.c',
    'stress-str.c',
    'stress-stream.c',
    'stress-swap.c',
    'stress-switch.c',
    'stress-sync-file.c',
    'stress-sysbadaddr.c',
    'stress-sysfs.c',
    'stress-sysinfo.c',
    'stress-sysinval.c',
    'stress-tee.c',
    'stress-timer.c',
    'stress-timerfd.c',
    'stress-tlb-shootdown.c',
    'stress-tmpfs.c',
    'stress-tree.c',
    'stress-tsc.c',
    'stress-tsearch.c',
    'stress-tun.c',
    'stress-udp-flood.c',
    'stress-udp.c',
    'stress-unshare.c',
    'stress-uprobe.c',
    'stress-urandom.c',
    'stress-userfaultfd.c',
    'stress-utime.c',
    'stress-vdso.c',
    'stress-vecmath.c',
    'stress-verity.c',
    'stress-vforkmany.c',
    'stress-vm-addr.c',
    'stress-vm-rw.c',
    'stress-vm-segv.c',
    'stress-vm-splice.c',
    'stress-vm.c',
    'stress-wait.c',
    'stress-watchdog.c',
    'stress-wcstr.c',
    'stress-x86syscall.c',
    'stress-xattr.c',
    'stress-yield.c',
    'stress-zero.c',
    'stress-zlib.c',
    'stress-zombie.c',
]

core_sources = [
    'core-affinity.c',
    'core-cache.c',
    'core-cpu.c',
    'core-ftrace.c',
    'core-hash.c',
    'core-helper.c',
    'core-ignite-cpu.c',
    'core-io-priority.c',
    'core-job.c',
    'core-limit.c',
    'core-log.c',
    'core-madvise.c',
    'core-mincore.c',
    'core-mlock.c',
    'core-mmap.c',
    'core-mounts.c',
    'core-mwc.c',
    'core-net.c',
    'core-out-of-memory.c',
    'core-parse-opts.c',
    'core-perf.c',
    'core-sched.c',
    'core-setting.c',
    'core-shim.c',
    'core-thermal-zone.c',
    'core-thrash.c',
    'core-time.c',
    'core-try-open.c',
    'core-vmstat.c',
    'stress-ng.c',
]


core_sources += custom_target('core-perf-event.h',
    input: 'core-perf-event.c',
    output: 'core-perf-event.h',
    capture: true,
    command: [
        find_program('core-perf-event.h_generator.sh'),
        compiler_command,
        '@INPUT@',
    ],
)

core_sources += custom_target('io-uring.h',
    input: 'core-io-uring.c',
    output: 'io-uring.h',
    capture: true,
    command: [
        find_program('io-uring.h_generator.sh'),
        compiler_command,
        '@INPUT@',
    ],
)

core_sources += custom_target('personality.h',
    input: 'core-personality.c',
    output: 'personality.h',
    capture: true,
    command: [
        find_program('personality.h_generator.sh'),
        compiler_command,
        '@INPUT@',
    ],
)


if have_apparmor
    core_sources += custom_target('apparmor-data.c',
        input: 'usr.bin.pulseaudio.eg',
        output: 'apparmor-data.c',
        command: [
            find_program('apparmor-data.c_generator.sh'),
            apparmor_parser.path(),
            '@INPUT@',
            '@OUTPUT@',
        ],
    )
endif


stress = executable('stress-ng',
    stress_sources, core_sources,
    dependencies: [
        math,
        libbsd,
        libapparmor,
    ],
    install: true,
)
